# scrapyio

./: .coveragerc  .gitignore  .isort.cfg  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml
examples/country_scraping_v0.5/: data.json  main.py  settings.py
examples/country_scraping_v0.6/: data.csv  data.db  data.json  settings.py  spiders.py
examples/proxies_scraping/: data.json  middlewares.py  settings.py  spiders.py
examples/simple_scraping_app/: data.json  main.py  requirements.txt
scrapyio/: __init__.py  cli.py  default_configs.py  downloader.py  engines.py  exceptions.py  http.py  item_loaders.py  item_middlewares.py  items.py  logger.py  middlewares.py  settings.py  spider.py  spider_file_template.py  types.py  utils.py
scrapyio/templates/: configuration_template.py
scripts/: build  check  coverage  install  lint  pytest  test
tests/: __init__.py  conftest.py  server.py  test_cli.py  test_downloader.py  test_downloader_middlewares.py  test_engine.py  test_http.py  test_item_loaders.py  test_item_middlewares.py  test_items.py  test_loaders.py  test_middlewares.py  test_proxy_middleware.py  test_settings.py  test_utils.py
