[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrapyio"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Karen Petrosyan", email = "kar.petrosyanpy@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "httpx==0.23.3",
  "click==8.1.3",
  "pydantic==1.10.7"
]

dynamic = ["version"]

[project.optional-dependencies]
orjson = [
  "orjson==3.8.9",
]

[project.urls]
Documentation = "https://github.com/karosis88/scrapyio#readme"
Issues = "https://github.com/karosis88/scrapyio/issues"
Source = "https://github.com/karosis88/scrapyio"

[tool.hatch.version]
path = "scrapyio/__about__.py"

[project.scripts]
scrapyio = "scrapyio.cli:main"
